# types-maya

./: .gitlab-ci.yml  CHANGELOG.md  README.md  dockerfile  justfile  pyproject.toml
.github/: README.md
.github/workflows/: release.yml  tests.yml
.gitlab/merge_request_templates/: Default.md
scripts/: github-readme.py
src/maya-stubs/: cmds.pyi  mel.pyi  standalone.pyi  utils.pyi
src/maya-stubs/api/: OpenMaya.pyi  OpenMayaAnim.pyi  OpenMayaRender.pyi  OpenMayaUI.pyi
