#:schema https://json.schemastore.org/pyproject.json
# tombi: format.rules.table-keys-order.disabled = true

[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "types-maya"
description = "External type annotations for Autodesk Maya Python API"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Thibaud Gambier" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Typing :: Stubs Only",
]
dependencies = []
dynamic = ["version"]

[project.urls]
PyPI = "https://pypi.org/project/types-maya"
Repository = "https://github.com/tahv/types-maya"

[dependency-groups]
dev = [
  "mypy>=1.4.1",
  "pyright>=1.1.393",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.uv]
required-version = ">=0.5.8"
default-groups = ["dev"]

[tool.ty]
environment.python-version = "3.10"

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[tool.pyright]
enableTypeIgnoreComments = false

[tool.ruff]
target-version = "py38"
src = ["src"]
include = ["src/**/*.py", "**/pyproject.toml"]
lint.select = ["ALL"]
lint.flake8-tidy-imports.ban-relative-imports = "all"
lint.pydocstyle.convention = "google"
lint.isort.required-imports = ["from __future__ import annotations"]
lint.ignore = [
  "A002",  # Function argument is shadowing a Python builtin
  "COM812",  # Missing trailing comma
  "D100",  # Missing docstring in public module
  "D103",  # Missing docstring in public function
  "D104",  # Missing docstring in public package
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in `__init__`
  "FIX002",  # Line contains TODO, consider resolving the issue
  "N802",  # Function name should be lowercase
  "N803",  # Argument name should be lowercase
  "N815",  # Variable in class scope should not be mixedCase
  "PD",  # panda-vet linter
  "PYI011",  # Only simple default values allowed for typed arguments
  "SIM300",  # Yoda condition detected
  "TD002",  # Missing author in TODO
  "TD003",  # Missing issue link on the line following this TODO
]
