#:schema https://json.schemastore.org/pyproject.json

[project]
name = "types-maya"
description = "External type annotations for Autodesk Maya Python API"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Thibaud Gambier" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Typing :: Stubs Only",
]
dependencies = []
dynamic = ["version"]

[project.urls]
PyPI = "https://pypi.org/project/types-maya"
Repository = "https://github.com/tahv/types-maya"

[dependency-groups]
dev = [
  "mypy>=1.4.1",
  "pyright>=1.1.393",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.hed]
changelog = "CHANGELOG.md"
title = "{tag}"
diff-url = "https://github.com/tahv/types-maya/compare/{prev}...{tag}"
capture-start = '^## \[{tag}\]'
capture-end = "^## "
softbreak = false

[tool.mypy]
files = ["src"]
strict = true
disallow_any_unimported = false

[tool.pyright]
enableTypeIgnoreComments = false

[tool.ruff]
target-version = "py38"
src = ["src"]
include = ["src/**/*.pyi", "**/pyproject.toml"]
lint.select = ["ALL"]
lint.flake8-tidy-imports.ban-relative-imports = "all"
lint.pydocstyle.convention = "google"
lint.isort.required-imports = ["from __future__ import annotations"]
lint.ignore = [
  "A002",  # Function argument is shadowing a Python builtin
  "COM812",  # Missing trailing comma
  "D100",  # Missing docstring in public module
  "D103",  # Missing docstring in public function
  "D104",  # Missing docstring in public package
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in `__init__`
  "FIX002",  # Line contains TODO, consider resolving the issue
  "N802",  # Function name should be lowercase
  "N803",  # Argument name should be lowercase
  "N815",  # Variable in class scope should not be mixedCase
  "PD",  # panda-vet linter
  "PYI011",  # Only simple default values allowed for typed arguments
  "SIM300",  # Yoda condition detected
  "TD002",  # Missing author in TODO
  "TD003",  # Missing issue link on the line following this TODO
]

[tool.ruff.lint.per-file-ignores]
"src/maya-stubs/cmds.pyi" = [
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "A001",  # Variable is shadowing a Python builtin
]
"src/maya-stubs/mel.pyi" = [
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "A001",  # Variable is shadowing a Python builtin
]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.ty]
environment.python-version = "3.10"
analysis.respect-type-ignore-comments = false

[tool.uv]
required-version = ">=0.5.8"
default-groups = ["dev"]
