[project]
name = "types-maya"
description = "External type annotations for Autodesk Maya Python API"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Thibaud Gambier" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
  "Typing :: Stubs Only",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Changelog = "https://gitlab.com/tahv/types-maya/-/blob/main/CHANGELOG.md"
Source = "https://gitlab.com/tahv/types-maya"

[dependency-groups]
dev = [
  "mypy>=1.4.1",
  "pyright>=1.1.393",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.hed]
changelog = "CHANGELOG.md"
capture-start = '^## \[{tag}\]'
capture-end = "^## "
diff-url = "https://gitlab.com/tahv/types-maya/-/compare/{prev}...{tag}"
softbreak = true
title = "{tag}"
top-heading = 2

[tool.mypy]
files = ["src"]
strict = true
disallow_any_unimported = false

[tool.pyright]
enableTypeIgnoreComments = false

[tool.ruff]
target-version = "py38"
src = ["src"]
include = ["src/**/*.pyi", "**/pyproject.toml"]
lint.select = ["ALL"]
lint.flake8-tidy-imports.ban-relative-imports = "all"
lint.pydocstyle.convention = "google"
lint.isort.required-imports = ["from __future__ import annotations"]
lint.ignore = [
  "A001",  # Variable is shadowing a Python builtin
  "A002",  # Function argument is shadowing a Python builtin
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "COM812",  # Missing trailing comma
  "FIX002",  # Line contains TODO, consider resolving the issue
  "N802",  # Function name should be lowercase
  "N803",  # Argument name should be lowercase
  "N815",  # Variable in class scope should not be mixedCase
  "PYI011",  # Only simple default values allowed for typed arguments
  "TD002",  # Missing author in TODO
  "TD003",  # Missing issue link on the line following this TODO
]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.ty]
environment.python-version = "3.8"
analysis.respect-type-ignore-comments = false

[tool.typos.default.extend-identifiers]
hed = "hed"

[tool.typos.default.extend-words]
lod = "lod"
LOD = "LOD"

[tool.uv]
required-version = ">=0.5.8"
default-groups = ["dev"]
